--- a/final/index.html
+++ b/final/index.html
@@ -10,11 +10,55 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
+    <section class="landing">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="landing-content">
+                        <h1 class="landing-title">
+                            Change your career,
+                            <br />
+                            Change your life
+                        </h1>
+                        <p class="landing-desc">
+                            Get ahead with expert-led training in
+                            <br />
+                            coding & design
+                        </p>
+                        <div class="button-group">
+                            <a href="#" class="fill-button">
+                                Apply now
+                            </a>
+                            <a href="#" class="fill-button inverted">
+                                Learn more
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section class="service">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h2 class="service-title">
+                        Master the Fundamentals while Exploring new Tech
+                    </h2>
+                    <p class="service-desc">
+                        We teach cutting-edge tech Full Stack Javascript as well as Computer Science fundamentals.
+                    </p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h2 class="service-title">
+                        Develop Production Level Web Applications
+                    </h2>
+                    <p class="service-desc">
+                        You put your knowledge into action with carefully designed assignments and personal software engineering projects.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
