--- a/final/index.html
+++ b/final/index.html
@@ -102,9 +102,9 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <strong class="section-category">Curriculum</strong>
-                    <h1 class="section-title">
+                    <h2 class="section-title">
                         Dive into the web development
-                    </h1>
+                    </h2>
                     <p class="section-desc">
                         Dive into the software development environment and the basics of computing, networks, and data structures.
                     </p>
@@ -132,5 +132,50 @@
             </div>
         </div>
     </section>
+    <aside class="subscription">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5">
+                    <div class="subscription-image">
+                        <img src="./assets/img-banner.png" alt="subscribe us">
+                    </div>
+                </div>
+                <div class="col-12 col-md-7">
+                    <h2 class="subscription-title">
+                        Stay with us
+                    </h2>
+                    <p class="subscription-desc">
+                        Subscribe to our email newsletter to stay up to date on the latest updates
+                    </p>
+                    <form action="#" method="POST" class="subscription-form">
+                        <div class="input-group">
+                            <input type="email" placeholder="Enter your email">
+                            <button type="submit" class="fill-button">Get started</button>
+                        </div>
+                        <p class="form-notice">
+                            Cancel any time. Check out <a href="#">Terms of Use.</a>
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </aside>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <ul class="footer-links">
+                    <li class="footer-link">
+                        <a href="#">Terms</a>
+                    </li>
+                    <li class="footer-link">
+                        <a href="#">Privacy</a>
+                    </li>
+                    <li class="footer-link">
+                        <a href="#">License</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
